Setting up package and server side

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "type": "git",
     "url": "git+https://github.com/rwraney3/Weather-App.git"
   },
-  "author": "",
+  "author": "Robert Raney",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/rwraney3/Weather-App/issues"
